お問い合わせアプリの機能部分実装完了

--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -15,3 +15,15 @@
     display: inline-block;
     margin: 0 5px;
 }
+
+table {
+    display: flex;
+    flex-direction: column;
+}
+tr {
+    display: flex;
+    flex-direction: row;
+}
+th, td {
+    flex: 1;
+}
